# ProductionGraph

./: .gitattributes  .gitignore  Contributions.md  README.md  TODO.txt  api.py  requirements.txt
.github/workflows/: CI.yml  rust.yml
backend/: requirements.txt
backend/backend/: admin.py  api.py  decorators.py  filters.py  forms.py  models.py  settings.py  test_rust.py  urls.py  views.py
backend/backend/migrations/: 0001_initial.py  0002_auto_20200604_2011.py  0002_auto_20200605_1751.py  0003_auto_20200617_1653.py  0003_merge_20200619_1541.py  0003_merge_20200626_0424.py
backend/backend/templates/fourohfour/: fourohfour.html
backend/backend/templates/home/: depCreationModal.html  index.html  login.html  product_analytics.html  product_info.html  register.html
backend/backend/templates/product_pages/: errorlisting.html  index.html  product_analytics.html  product_info.html  products_analytics.html
backend/backend/tests/: test_history.py  test_models.py  test_rust.py  test_urls.py  test_views.py
backend/theme/static_src/: package-lock.json  package.json
backend/theme/templates/: base.html  landing_base.html
frontend/frontend/: settings.py
package/: MANIFEST.in  boot_django.py  build_tailwind.py  makemigrations.py  migrate.py  oldsetup.cfg  run_tests.py  runserver.py  setup.cfg  setup.py
package/backend/: api.py  filters.py  models.py  settings.py  test_rust.py  urls.py  views.py
package/backend/migrations/: 0001_initial.py  0002_auto_20200731_2002.py
package/backend/static_built/assets/stock-exchange-data-illustration/: 4034997.eps
package/backend/static_built/css/: styles.css
package/backend/templates/: base.html  index.html  landing_base.html
package/backend/templates/home/: index.html  login.html  product_analytics.html  product_info.html  register.html  test.html
package/backend/templates/product_pages/: index.html  product_analytics.html  product_info.html  products_analytics.html
package/backend/tests/: __init__.py  test_models.py  test_rust.py  test_urls.py  test_views.py
package/scripts/: init.py  migrate_and_run.py  run.py  test.py
package/static_built/assets/stock-exchange-data-illustration/: 4034994.ai
package/static_built/css/: styles.css
product_graph_py/product_graph_bindings/: Cargo.toml  bench.py  expanded.rs
product_graph_py/product_graph_bindings/src/: lib.rs
production_graph_rs/: Cargo.toml  ReadMe.txt
production_graph_rs/src/: lib.rs  main.rs  product_graph.rs  product_graph_rayon.rs
production_graph_rs/src/production_graph/: mod.rs  product_graph.rs
rs_alt_ds/: Cargo.toml
rs_alt_ds/src/: dependency.rs  lib.rs  main.rs  product.rs  product_graph_hashmap.rs
(+1 files in other folders)
