[metadata]
name = productiongraph
version = 0.1.0
description = Web interface for calculating prices
long_description = file:README.rst
url = https://github.com/camgrodgers/ProductionGraph
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.8
setup_requires = 
    setuptools >= 38.3.0
install_requires =
    Django>=3.0.7
	product_graph_bindings>=0.1.0
test_suite = load_tests.get_suite
