[package]
name = "product_graph_rs"
version = "0.1.0"
authors = ["Cameron Rodgers"]
edition = "2018"
description = "Calculate costs and labor times using a weighted dependency graph"
repository = "https://github.com/camgrodgers/ProductionGraph/"
categories = ["libraries"]
license = "MIT"


[lib]



[dependencies]
rand = "0.7"
rayon = "1.3.0"
