[package]
name = "production-graph"
version = "0.1.0"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1.3.0"
hashbrown = {version = "0.8", features = ["rayon"]}