[package]
name = "product_graph_bindings"
version = "0.1.0"
authors = ["\"Cameron R\" <cameron.g.rodgers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arr_sum"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[dependencies]
