[package]
name = "product_graph_bindings"
version = "0.1.0"
authors = ["Cameron Rodgers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "product_graph_bindings"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[dependencies]
product_graph_rs = {path = "../../production_graph_rs", version = "0.1" }
